--- a/posts/2020-10-01-unfold.md
+++ b/posts/2020-10-01-unfold.md
@@ -77,7 +77,7 @@ run :: IO ()
 run = print (take 4 (iterate request Initial))
 ```
 
-```
+```haskell
 *Main> run
 [ 
   Initial,
@@ -101,12 +101,10 @@ This function will take an initial value and return a list of chunks
 recursiveRequest :: (Maybe Cursor -> Maybe ([Int], Maybe Cursor))
                   -> Maybe Cursor
                   -> [[Int]]
-recursiveRequest f c = go c []
-  where 
-    go c' acc = case f c' of
-      Just (r, Just c'') -> go (Just c'') (acc ++ [r])
-      Just (r, Nothing) -> acc ++ [r]
-      Nothing -> acc
+recursiveRequest f c = case f c of
+  Just (r, Just c') -> r : recursiveRequest f (Just c')
+  Just (r, Nothing) -> [r]
+  Nothing -> []
 ```
 
 Let's make this function _generic_. Replace the `[Int]`s with `a`s
@@ -119,12 +117,9 @@ recursiveRequest :: (Maybe Cursor -> Maybe ([Int], Maybe Cursor))
 genericRequest   :: (b            -> Maybe ( a   , b           )) 
                  -> b            
                  -> [  a  ]
-genericRequest f i = go i []
-  where 
-    go b acc =
-      case f b of
-        Just (a, b') -> go b' (acc ++ [a])
-        Nothing -> acc
+genericRequest f b = case f b of
+  Just (a, b') -> a : genericRequest f b'
+  Nothing -> []
 ```
 
 The first argument is a function that will return an `a` and a new `b`.
@@ -151,7 +146,7 @@ data State a = Start | Next a | End
 Recall the type of our endpoint. When `Nothing` is applied to this function,
 it returns a function of type `Maybe Cursor -> Maybe ([Int], Maybe Cursor)`.
 
-```ghci
+```haskell
 *Main> :t endpoint
 endpoint :: Maybe Int -> Maybe Cursor -> Maybe ([Int], Maybe Cursor)
 *Main> :t endpoint Nothing
@@ -201,12 +196,9 @@ instead of the lambda. In summary, we have
 
 ```haskell
 genericRequest :: (b -> Maybe (a, b)) -> b -> [a]
-genericRequest f i = go i []
-  where
-    go b acc =
-      case f b of
-        Just (a, b') -> go b' (acc ++ [a])
-        Nothing -> acc
+genericRequest f b = case f b of
+  Just (a, b') -> a : genericRequest f b'
+  Nothing -> []
 
 genericWrapped :: (Maybe b -> Maybe (a, Maybe b)) ->  State b -> Maybe (a, State b)
 genericWrapped f Start = fmap (second maybeToState) (f Nothing)
@@ -219,6 +211,11 @@ maybeToState Nothing = End
 
 run :: IO ()
 run = print (genericRequest (genericWrapped (endpoint Nothing)) Start)
+```
+
+```haskell
+*Main> run
+[[1,2,3,4,5,6],[7,8,9,10,11,12],[13,14,15]]
 ```
 
 Again, the idea here is that we are generating a list of things from a value.
@@ -237,7 +234,7 @@ run :: IO ()
 run = print (unfoldr (genericWrapped (endpoint Nothing)) Start)
 ```
 
-```
+```haskell
 *Main> run
 [[1,2,3,4,5,6],[7,8,9,10,11,12],[13,14,15]]
 ```
