Update style to yellow theme

--- a/posts/2020-10-01-unfold.md
+++ b/posts/2020-10-01-unfold.md
@@ -8,10 +8,10 @@ Cursor-based pagination is a common strategy for breaking up
 query results into smaller chunks. Each chunk contains a portion
 of the results, and a reference to the last item in the chunk.
 
-For example, the following request will get 2 accounts *after* the 
+For example, the following request will get 2 accounts *after* the
 cursor `x`
 
-```
+```default
 GET /accounts?page[size]=2&page[after]=x
 ```
 
@@ -70,7 +70,7 @@ This can either be `Chunk` or `Final`.
 
 If we have a `Chunk`, we can obtain another `Chunk`, or a `Final`.
 Note that we are not concatenating the pages in this function.
-We are simply returning the _next_ state from our current state.
+We are simply returning the *next* state from our current state.
 
 ```haskell
 run :: IO ()
@@ -107,7 +107,7 @@ recursiveRequest f c = case f c of
   Nothing -> []
 ```
 
-Let's make this function _generic_. Replace the `[Int]`s with `a`s
+Let's make this function *generic*. Replace the `[Int]`s with `a`s
 and the `Maybe Cursor`s with `b`s.
 
 ```haskell
@@ -137,7 +137,7 @@ run = print (genericRequest (endpoint Nothing) Nothing)
 The main problem here is the type of `b`.
 In this context, it is a `Maybe Cursor` which is not enough to encode
 being in the start, middle or end of the recursion. We need a more
-expressive type for `b`. 
+expressive type for `b`.
 
 ```haskell
 data State a = Start | Next a | End
@@ -171,8 +171,8 @@ wrapped f (Next b) = case f (Just b) of
 wrapped f End = Nothing
 ```
 
-Huh, this looks a lot like our initial `request`. 
-Let's take a step back and understand what this function is really doing. 
+Huh, this looks a lot like our initial `request`.
+Let's take a step back and understand what this function is really doing.
 
 If the endpoint returns a cursor `Just b'`, we want to encode this state as `Next b'`. 
 Otherwise, there are no more pages and we encode the state as `End`.
@@ -239,7 +239,4 @@ run = print (unfoldr (genericWrapped (endpoint Nothing)) Start)
 [[1,2,3,4,5,6],[7,8,9,10,11,12],[13,14,15]]
 ```
 
-[up-bank-api]: https://github.com/ldgrp/up-bank-api
-[snails-api]: https://github.com/ldgrp/snails-api
-[up-pagination]: https://developer.up.com.au/#pagination
 [hoogle]: https://hoogle.haskell.org/
