--- a/posts/external/2023-03-11-tax-cut.md
+++ b/posts/external/2023-03-11-tax-cut.md
@@ -1,5 +1,5 @@
 ---
 title: How big is my tax cut?
 date: 2023-03-11
-url: https://observablehq.com/@ldgrp/how-big-is-my-tax-cut
+url: https://ldgrp.me/sandbox/how-big-is-my-tax-cut
 ---
